[package]
name = "yabts"
version = "0.1.0"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "*"

[dev-dependencies]
snap = "1"


[features]
default = ["server"]
server = []
client = []
test = []


